--- a/app/src/main/res/layout/activity_itoman.xml
+++ b/app/src/main/res/layout/activity_itoman.xml
@@ -11,7 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="TextView"
+        android:text="糸満市"
         android:textAlignment="textStart"
         android:textSize="36sp"
         android:textStyle="bold"
@@ -25,7 +25,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="南部そば"
         android:textAlignment="textStart"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -39,7 +39,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="壱蘭"
         android:textAlignment="textStart"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -53,7 +53,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="いーばる家"
         android:textAlignment="textStart"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -67,7 +67,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="月桃華(さんいんばな)"
         android:textAlignment="textStart"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -81,7 +81,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="とぅんち小(とぅんちぐわぁ)"
         android:textAlignment="textStart"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -95,7 +95,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="おかあさん"
         android:textAlignment="textStart"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -109,7 +109,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="ひめゆりそば"
         android:textAlignment="textStart"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -123,7 +123,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="平和園そば"
         android:textAlignment="textStart"
         android:textSize="30sp"
         android:textStyle="bold"
