--- a/app/src/main/res/layout/activity_yonabaru_store.xml
+++ b/app/src/main/res/layout/activity_yonabaru_store.xml
@@ -6,14 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".YonabaruStore">
 
-    <com.google.android.gms.maps.MapView
-        android:id="@+id/mapView"
-        android:layout_width="340dp"
-        android:layout_height="320dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <TextView
         android:id="@+id/textView44"
         android:layout_width="wrap_content"
@@ -37,5 +29,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView44" />
+
+    <TextView
+        android:id="@+id/textView60"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="207dp"
+        android:autoLink="all"
+        android:text="https://www.google.com/maps/place/%E6%B2%96%E7%B8%84%E3%81%9D%E3%81%B0%E5%B0%82%E9%96%80%E5%BA%97+%E4%B8%8E%E9%82%A3%E5%8E%9F%E5%AE%B6/@26.2086934,127.7581047,15z/data=!4m5!3m4!1s0x0:0x9f6249ad866a735b!8m2!3d26.2086934!4d127.7581047"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
